--- a/PhD-cv.tex
+++ b/PhD-cv.tex
@@ -192,6 +192,15 @@ Visvesvaraya Technological University\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Work Experience}
+\runsubsection{Smartly.io}
+\descript{| Data Scientist}
+\location{April 2023 - now | Espoo, Finland}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item Develop new machine learning (ML) solutions to improve Smartly's product portfolio and maintain existing ML solutions. 
+\end{tightemize}
+\sectionsep
+
 \runsubsection{AALTO University}
 \descript{| Doctoral Candidate}
 \location{June 2018 - now | Espoo, Finland}
@@ -207,17 +216,6 @@ Visvesvaraya Technological University\\
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
 \item Implementing a GPU accelerated Gaussian process inference in PyMC. \href{https://summerofcode.withgoogle.com/proposals/details/D0vXBd2x}{Link}.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{AALTO University}
-\descript{| Research Assistant - Honours Program}
-\location{May 2016 - August 2017 | Espoo, Finland}
-%\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-	\item Developed deep learning models to predict molecular electronic properties. Supervised by Prof. Vehtari (Dept. Computer Science) and advised by Prof. Patrick Rinke (Dept. Applied Physics).
-	
-	% \item Studied semi-supervised extensions of the Variational Auto-Encoder and related models. Supervised by Prof. Tapani Raiko, Prof. Aki Vehtari and advised by Dr. Jyri Kivinen. 
 \end{tightemize}
 \sectionsep
 
